1999-07-11  Thomas Bushnell, BSG  <tb@mit.edu>

	* ugids-argp.c (parse_opt): Clarify if-then-else structure by
	adding more braces.

	* portinfo.c (print_port_info): Cast first arg of munmap
	correctly. 
	(print_task_ports_info): Likewise.
	* xportinfo.c (print_xlated_task_ports_info): Likewise.
	* idvec-auth.c (idvec_merge_auth): Likewise.
	* portxlate.c (port_name_xlator_create): Likewise.
	(port_name_xlator_free): Likewise.

1999-07-10  Roland McGrath  <roland@baalperazim.frob.com>

	* portinfo.h: Add #include <sys/mman.h> for munmap decl.
	* fsysops.c: Likewise.
	* idvec-auth.c: Likewise.
	* portxlate.c: Likewise.

1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>

	* fsysops.c (fsys_get_readonly): Use munmap instead of vm_deallocate.
	* idvec-auth.c (idvec_merge_auth): Likewise.
	* portinfo.c (print_port_info): Likewise.
	(print_task_ports_info): Likewise.
	* portxlate.c (port_name_xlator_create): Likewise.
	(port_name_xlator_free): Likewise.
	* xportinfo.c (print_xlated_task_ports_info): Likewise.

1999-05-23  Roland McGrath  <roland@baalperazim.frob.com>

	* idvec-verify.c (SHADOW_PASSWORD_STRING): New macro.
	(verify_id): Check for shadow password immediately after getpwuid_r
	call, and replace PW->pw_passwd pointer with SP->sp_pwdp.
	This is ok since the only use will be later in the function,
	and we give the lookup buffer function scope.
	(verify_passwd): Don't call CHECK_SHADOW for main passwd,
	only when rechecking for wheel-group hack.

1999-05-20  Roland McGrath  <roland@baalperazim.frob.com>

	* idvec-verify.c (verify_passwd): Avoid nonreentrant getpwuid.
	If pw_passwd is "x", use getspnam_r and use its sp_pwdp if it succeeds.

1998-12-21  Mark Kettenis  <kettenis@phys.uva.nl>

	* ugids-verify-auth.c: Include <hurd/password.h> again and remove
	temporary definitions of password_check_user and
	password_check_group.

1998-11-29  Mark Kettenis  <kettenis@phys.uva.nl>

	* idvec-verify.c (verify_passwd): Grant access when the password