@@ -67,13 +67,13 @@ idvec_merge_auth (struct idvec *eff_uids, struct idvec *avail_uids,
 
   /* Deallocate any out-of-line memory we got back.  */
   if (_eff_uids != eff_uid_buf)
-    munmap (_eff_uids, num_eff_uids);
+    munmap ((caddr_t) _eff_uids, num_eff_uids);
   if (_avail_uids != avail_uid_buf)
-    munmap (_avail_uids, num_avail_uids);
+    munmap ((caddr_t) _avail_uids, num_avail_uids);
   if (_eff_gids != eff_gid_buf)
-    munmap (_eff_gids, num_eff_gids);
+    munmap ((caddr_t) _eff_gids, num_eff_gids);
   if (_avail_gids != avail_gid_buf)
-    munmap (_avail_gids, num_avail_gids);
+    munmap ((caddr_t) _avail_gids, num_avail_gids);
 
   return err;
 }
